Clase05-HTML, / Curso CSS / Introduccion / Selectores / Actualizando los CSS

--- a/Clase05_22_06_2022/3f-css.html
+++ b/Clase05_22_06_2022/3f-css.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>CSS 3</title>
-    <link rel="stylesheet" href="3f-style.css"> <!-- Permite enlazar una hoja de estilos con la pagina html   -->
+    <link rel="stylesheet" href="css/3f-style.css"> <!-- Permite enlazar una hoja de estilos con la pagina html   -->
 </head>
 <body>
     <h1>Tercera forma para insertar codigo CSS</h1>   
