--- a/Clase05_22_06_2022/selectores.html
+++ b/Clase05_22_06_2022/selectores.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Selectores</title>
-    <link rel="stylesheet" href="selectores-style.css">
+    <link rel="stylesheet" href="css/selectores-style.css">
 </head>
 <body>
     <h1>Tipos de selectores</h1>
