--- a/Clase05_22_06_2022/selectores2.html
+++ b/Clase05_22_06_2022/selectores2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="selectores2-style.css">   
+    <link rel="stylesheet" href="css/selectores2-style.css">   
 </head>
 <body>
     <h1 id="titulo">Tipos de selectores CSS</h1>
