--- a/Clase05_22_06_2022/selectores3.html
+++ b/Clase05_22_06_2022/selectores3.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>CSS3</title>
-    <link rel="stylesheet" href="selectores3-style.css">
+    <link rel="stylesheet" href="css/selectores3-style.css">
 </head>
 <body>
     <h1>Orden de los selectores 1</h1>
