--- a/Clase05_22_06_2022/selectores4.html
+++ b/Clase05_22_06_2022/selectores4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Document</title>
-    <link rel="stylesheet" href="selectores4-style.css">
+    <link rel="stylesheet" href="css/selectores4-style.css">
 </head>
 <body>
     <h1>Selectores Varios</h1>
